@@ -2,6 +2,8 @@
 
 package edu.colorado.phet.reactantsproductsandleftovers.module.realreaction;
 
+import edu.colorado.phet.common.phetcommon.util.IntegerRange;
+
 
 
 /**
@@ -14,4 +16,6 @@ public class RealReactionDefaults {
     /* Not intended for instantiation */
     private RealReactionDefaults() {}
     
+    public static final IntegerRange COEFFICIENT_RANGE = new IntegerRange( 0, 3, 0 );
+    public static final IntegerRange QUANTITY_RANGE = new IntegerRange( 0, 10, 0 );
 }
